public enum Suggestion {
    END, OPEN, REVERSE, WAIT, MOVE
} //相当于是宏定义
